# SDM-DDS

./: .gitignore  README.md  activate_env.sh  pyproject.toml  requirements.txt  setup.py
docs/: idl_change_without_source_modification.md  idl_guide.md  idls_sdk_separation.md  pubsub_exception_handling_plan.md  pubsub_sdk_spec.md  rpc_sdk_spec.md
idls/: HelloWorld.idl  README.md  add_service_namespaces.py  idl_to_py.sh  setup.py
idls/rpc/: Headers.idl  ServiceRegistry.idl  _Headers.py  _ServiceRegistry.py  __init__.py
idls/services/: AddService.idl  CalculateService.idl
sdk/: setup.py
sdk/pubsub/: __init__.py  _discovery.py  exceptions.py  publisher.py  subscriber.py
sdk/rpc/: __init__.py  client.py  exceptions.py  server.py
sdm_dds_rpc/: client.py  exceptions.py  server.py
src/: calculate_client.py  calculate_server.py  publisher.py  pubsub_publisher_example.py  pubsub_subscriber_callback_example.py  pubsub_subscriber_example.py  rpc_client.py  rpc_server.py  subscriber.py  subscriber_callback.py
tests/: rpc_server_instance.py  test_pubsub.py  test_rpc.py
