[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdm-dds-rpc"
version = "0.1.0"
description = "DDS 기반 RPC 및 PubSub SDK"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cyclonedds",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = ["rpc", "sensor_msgs", "std_msgs", "services", "hello_msgs", "sdm_dds_rpc", "sdm_dds_pubsub"]

[tool.setuptools.package-dir]
"" = "idls/build"
sdm_dds_rpc = "sdk/rpc"
sdm_dds_pubsub = "sdk/pubsub"
